# klara

./: .coveragerc  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yml  CHANGELOG  LICENSE  Makefile  README.md  README.rst  ast_test.py  pyproject.toml  readme.md  setup.cfg  test.py
.github/workflows/: publish.yml  test.yml
A1.FunctionDef/: example.py  funcDef.py  func_def.py  readme.md
A2.Ast2Py/: readme.md
A2.LVN/: example.py  lvn.py  readme.md  test_lvn.py
A2.ReversingAst/: readme.md
A3.LVN/: common.py  lvn.py  lvn_without_extension.py  readme.md  tac.py  test_lvn.py  test_lvn_dict.py  test_tac_ssa.py  variable_dict.py
A3.LVN/Version1/: lvn.py  readme.md  ssa.py
A3.LVN/Version2/: algebraic_identities.py  common.py  lvn.py  lvn_dict.py  readme.md  ssa.py  test_alg_ident.py  test_lvn.py  test_ssa.py
A3.reversingAst/: examply.py  readme.md  reverseAst.py  simpleExample.py
A3_LVN/: readme.md
A3_LVN/Version2/: common.py  lvn.py  lvn_dict.py  ssa.py  test_lvn.py  test_ssa.py
A4.Cfg/: cfg.py  common.py  dominator.py  readme.md  test_cfg.py  test_dominator.py  test_helper.py  test_ins_phi.py  test_renaming.py  test_var_ast.py  var_ast.py
A4_CFG/: cfg.py  prologue.py  readme.md  test_cfg.py  test_dominator.py  test_ins_phi.py  test_live_variable.py  test_renaming.py  test_var_ast.py  var_ast.py
A4_LiveVariable/: cfg.py  cfg_common.py  readme.md  test_dominator.py  test_live_variable.py  test_var_ast.py
A5_ClassFactory/: ClassFactory.py  OperatorFactory.py
Common/: cfg_common.py  common.py  test_get_ast_node.py
Common/A1.FunctionDef/: example.py
Common/A2.Ast2Py/: examply.py  readme.md
Common/test_helper/: cfg_th.py  ssa_th.py
cfg_and_ssa/: cfg.py  readme.md  test_cfg.py  test_helper.py
dev-script/: check_difference.py  fstring-converter.py  get_class_names.py  monitor_process.sh  performance-regression.sh  release.sh  remove-trailing-ws  repeat-test
docs/source/: api.rst  cfg_ssa.rst  conf.py  customize_coverage_strategy.rst  index.rst  introduction.md  introduction.rst  limitation.rst  quick_start.rst
klara/: __init__.py  cli.py
klara/common/: common.py
klara/contract/: __main__.py  config.py  solver.py
klara/core/: __init__.py  _ast.py  base_manager.py  bases.py  cfg.py  config.py  context_mod.py  decorators.py  exceptions.py  inference.py  manager.py  node_classes.py  nodes.py  protocols.py  recipe.py  scoped_node_classes.py  source_utils.py  ssa.py  ssa_visitors.py  transform.py  tree_rewriter.py  use_def_chain.py  utilities.py
klara/examples/: custom_test_gen.py  extending_inference.py  extending_transform.py  infer_z3.py  simple_inference.py
klara/html/: phystokens.py  report.py  templite.py
klara/klara_z3/: cov_manager.py  inference_extension.py  z3_nodes.py  (+1 more)
(+68 files in other folders)
